# lib_mysqludf_amqp

./: Makefile.am
